--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.17.0",
+    "jodit-react": "^5.2.38",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
+    "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
